tests/miniJava/neg/006172_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { static while ( 0 ) { } } }
